<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frame_Layout">

    <ImageView
        android:id="@+id/f_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/android"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/frame"
        android:textSize="25sp"
        android:fontFamily="sans-serif-black"
        android:layout_marginVertical="250dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/f_home"
        android:text="@string/home"
        android:layout_marginVertical="300dp"
        android:layout_marginStart="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/f_next"
        android:layout_marginVertical="300dp"
        android:layout_marginStart="300dp"
        android:text="@string/nxt" />


</FrameLayout>