<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".Relative_Layout">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/android"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/r_image"/>

    <TextView
        android:id="@+id/r_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative"
        android:textSize="22sp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/r_image"
        android:textAlignment="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/r_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nxt"
        android:layout_marginTop="30dp"
        android:layout_alignEnd="@id/r_text"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/r_text"/>



</RelativeLayout>